2006-09-11  Mo DeJong  <mdejong@users.sourceforge.net>

        * docs/TclJava/ClassLoading.html: Update
        class loading info, mention use of context
        class loader and how env(TCL_CLASSPATH) should
        be used at runtime.
        * docs/TclJava/JavaSignatures.html: Update
        signature docs, add full signature example.
        * src/tcljava/tcl/lang/TclClassLoader.java (checkTclClasspath):
        A bug was causing changes to env(TCL_CLASSPATH) to
        be ignored in checkTclClasspath, fix it by using
        || instead of && in the test expr.
        * tests/tcljava/tcljavaInterp.test: Add
        regression test cases for path bug.
        [Bug 1556640]

2006-08-21  Mo DeJong  <mdejong@users.sourceforge.net>

        * announce: Update for 1.4.0 release.
        * docs/Topics/WhatsNew.html: Mention setInterrupt API.
        * docs/website/index.html: Update for 1.4.0 release.

2006-08-21  Mo DeJong  <mdejong@users.sourceforge.net>

        * configure: Regen.
        * tcljava.m4 (AC_GCC_BUGS):
        Replace AC_TRY_COMPILE with AC_TRY_RUN so
        that program is compiled and run on host system.
	[Bug 1528278]

2006-08-21  Mo DeJong  <mdejong@users.sourceforge.net>

        * src/tjc/tcl/lang/TJC.java: Fixup comments.
        * src/tjc/tjc/library/compileproc.tcl:
        Remove FIXME comments.
        * tests/tjc/compileproc_7.test: Test lappend
        to scoped variable name, this usage will
        not init a scoped var slot.

2006-08-21  Mo DeJong  <mdejong@users.sourceforge.net>

        * src/jacl/tcl/lang/Expression.java:
        Make expr pool default to 50 ExprValue objects.

2006-08-18  Mo DeJong  <mdejong@users.sourceforge.net>

        * configure: Regen,
        * configure.in: Invoke new macro.
        * tcljava.m4 (AC_GCC_BUGS): Add new macro
	that attempts to detect a tricky bug known to
	exist in gcc 4.1.0. This optimizer bug causes
	failures when converting a long long back into